.argocd/unleash/templates/ingress-client.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash-proxy-ingress
  namespace: infra
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /proxy-unleash(/|$)(.*)
            backend:
              service:
                name: unleash-proxy
                port:
                  number: 80
