.argocd/unleash/templates/ingress-server.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash-ingress
  namespace: infra
spec:
  ingressClassName: ingress
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /unleash(/|$)(.*)
            backend:
              service:
                name: unleash-server
                port:
                  number: 4242
